--- a/playbooks/roles/gatling/vars/main.yml
+++ b/playbooks/roles/gatling/vars/main.yml
@@ -7,7 +7,8 @@ gatling: {
   },
   url:     '{{ common.urls.jcenter }}/io/gatling/highcharts/gatling-charts-highcharts-bundle/<version>/gatling-charts-highcharts-bundle-<version>-bundle.zip',
   archive: /opt/gatling-<version>.zip,
-  home:    /opt/gatling
+  home:    /opt/gatling,
+  light_console: true
 }
 
 gatling_env: {
