curl -Ls + variables cosmetics

--- a/playbooks/roles/ansible/vars/main.yml
+++ b/playbooks/roles/ansible/vars/main.yml
@@ -2,7 +2,7 @@
 ansible: {
   version: latest, # 1.8.2, latest - https://pypi.python.org/pypi/ansible
   latest: {
-    command: "curl -s 'https://pypi.python.org/pypi/ansible' | grep '<title>' | sed 's/^.*<title>//' | cut -d' ' -f2",
+    command: "curl -Ls '{{ common.urls.pypi }}/ansible' | grep '<title>' | sed 's/^.*<title>//' | cut -d' ' -f2",
     pattern: '^\d+\.\d+(\.\d+)?$'
   },
   inventory_file: /etc/ansible/hosts
