--- a/playbooks/roles/gradle/vars/main.yml
+++ b/playbooks/roles/gradle/vars/main.yml
@@ -2,7 +2,7 @@
 gradle: {
   version: latest, # 2.2.1, latest - https://www.gradle.org/downloads
   latest: {
-    command: "curl -s '{{ common.urls.gradle }}/downloads' | grep 'latest release' | sed -r 's/.+<strong>//' | sed -r 's/<\\/strong>.+//'",
+    command: "curl -Ls '{{ common.urls.gradle }}/downloads' | grep 'latest release' | sed -r 's/.+<strong>//' | sed -r 's/<\\/strong>.+//'",
     pattern: '^\d+\.\d+(\.\d+)?$'
   },
   url:     'https://services.gradle.org/distributions/gradle-<version>-bin.zip',
