--- a/playbooks/roles/tomcat/vars/main.yml
+++ b/playbooks/roles/tomcat/vars/main.yml
@@ -1,12 +1,12 @@
 ---
 tomcat: {
-  version: latest, # 8.0.15, 7.0.57, latest - https://tomcat.apache.org/download-80.cgi
+  version: latest, # 8.0.17, 7.0.57, latest - https://tomcat.apache.org/download-80.cgi
+  port:    8080,
   latest: {
-    command: "curl -s 'https://tomcat.apache.org/download-80.cgi' | grep 'apache-tomcat-' | grep '.zip' | head -1 | sed -r 's/.+apache-tomcat-//' | sed -r 's/\\.zip.+//'",
+    command: "curl -Ls '{{ common.urls.tomcat }}/download-80.cgi' | grep 'apache-tomcat-' | grep '.zip' | head -1 | sed -r 's/.+apache-tomcat-//' | sed -r 's/\\.zip.+//'",
     pattern: '^\d+\.\d+\.\d+$'
   },
   url:     'http://www.eu.apache.org/dist/tomcat/tomcat-<N>/v<version>/bin/apache-tomcat-<version>.tar.gz',
-  port:    8080,
   archive: /opt/tomcat-<version>.tar.gz,
   home:    /opt/tomcat
 }
