--- a/playbooks/roles/exhibitor/vars/main.yml
+++ b/playbooks/roles/exhibitor/vars/main.yml
@@ -3,7 +3,7 @@ exhibitor: {
   version: latest, # 1.5.2, latest - https://github.com/Netflix/exhibitor/releases
   port:    8080,
   latest: {
-    command: "curl -s '{{ common.urls.jcenter }}/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
+    command: "curl -Ls '{{ common.urls.jcenter }}/com/netflix/exhibitor/exhibitor-standalone/' | grep '<pre>' | grep -v 'maven-metadata.xml' | sed -r 's/<[^>]+>//g' | tr -d '/' | tail -1",
     pattern: '^\d+\.\d+\.\d+$'
   },
   maven_repo: '{{ common.urls.jcenter }}',
