--- a/playbooks/roles/gatling/vars/main.yml
+++ b/playbooks/roles/gatling/vars/main.yml
@@ -2,7 +2,7 @@
 gatling: {
   version: latest, # 2.1.3, latest - https://jcenter.bintray.com/io/gatling/highcharts/gatling-charts-highcharts/
   latest: {
-    command: "curl -s '{{ common.urls.jcenter }}/io/gatling/highcharts/gatling-charts-highcharts/' | grep '<pre>' | grep -v 'metadata' | sed -r 's/<[^>]+>//g' | sed -r 's/\\/$//' | tail -1",
+    command: "curl -Ls '{{ common.urls.jcenter }}/io/gatling/highcharts/gatling-charts-highcharts/' | grep '<pre>' | grep -v 'metadata' | sed -r 's/<[^>]+>//g' | sed -r 's/\\/$//' | tail -1",
     pattern: '^\d+\.\d+\.\d+$'
   },
   url:     '{{ common.urls.jcenter }}/io/gatling/highcharts/gatling-charts-highcharts-bundle/<version>/gatling-charts-highcharts-bundle-<version>-bundle.zip',
