--- a/playbooks/roles/scala/vars/main.yml
+++ b/playbooks/roles/scala/vars/main.yml
@@ -2,7 +2,7 @@
 scala: {
   version: latest, # 2.11.5, latest - http://scala-lang.org/download/
   latest: {
-    command: "curl -s '{{ common.urls.scala }}/download/' | grep '<span class=\"version\">' | sed -r 's/<[^>]+>//g' | awk '{print $2}'",
+    command: "curl -Ls 'http://www.scala-lang.org/download/' | grep '<span class=\"version\">' | sed -r 's/<[^>]+>//g' | awk '{print $2}'",
     pattern: '^\d+\.\d+\.\d+$'
   },
   url:     'http://downloads.typesafe.com/scala/<version>/scala-<version>.tgz',
