--- a/playbooks/roles/helios/tasks/agent.yml
+++ b/playbooks/roles/helios/tasks/agent.yml
@@ -13,9 +13,7 @@
     url:  "{{ helios.agent.registrar_plugin.url | tokens( helios.agent.registrar_plugin ) }}"
     dest: "{{ registrar_plugin }}"
 
-- include: "{{ common.utils.mkdir }}"
-  vars:
-    file:  "{{ helios.agent.config_endpoints }}"
+- file: path={{ helios.agent.config_endpoints | expanduser | dirname }} state=directory
 
 - name: Copying Helios agent configs
   template:
