--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -42,6 +42,7 @@ common: {
     tomcat:    "{{ playbook_dir }}/roles/tomcat/tasks/main.yml",
     exhibitor: "{{ playbook_dir }}/roles/exhibitor/tasks/main.yml",
     gradle:    "{{ playbook_dir }}/roles/gradle/tasks/main.yml",
-    register:  "{{ playbook_dir }}/roles/skydns/register-host.yml"
+    register:  "{{ playbook_dir }}/roles/skydns/register-host.yml",
+    gatling:   "{{ playbook_dir }}/roles/gatling/run-simulations.yml"
   }
 }
