--- a/playbooks/roles/gatling/run-simulations.yml
+++ b/playbooks/roles/gatling/run-simulations.yml
@@ -1,36 +1,20 @@
 ---
+- set_fact: simulations_script=/opt/gatling-simulations.sh
+  when:     simulations_script is not defined
 
-- debug: msg="Running simulations {{ simulations | join( ', ' ) }} => '{{ reports_dir }}'"
+- debug: msg="Running Gatling simulations {{ simulations | join( ', ' ) }} => '{{ simulations_script }}' => '{{ reports_dir }}'"
   when:  reports_archive is not defined
 
-- debug: msg="Running simulations {{ simulations | join( ', ' ) }} => '{{ reports_dir }}' => '{{ reports_archive }}'"
+- debug: msg="Running Gatling simulations {{ simulations | join( ', ' ) }} => '{{ simulations_script }}' => '{{ reports_dir }}' => '{{ reports_archive }}'"
   when:  reports_archive is defined
 
-- name: Generating simulation scripts
+- name: Creating simulations script
   template:
-    src:  "{{ playbook_dir }}/roles/gatling/templates/run-simulation.sh"
-    dest: "{{ gatling_simulations }}/{{ item }}.sh"
-  with_items: simulations
+    src:  "{{ playbook_dir }}/roles/gatling/templates/run-simulations.sh"
+    dest: "{{ simulations_script }}"
+- shell:  chmod +x '{{ simulations_script }}'
 
-- command:    chmod +x '{{ gatling_simulations }}/{{ item }}.sh'
-  with_items: simulations
-
-- name: Running simulation scripts
-  shell: "{{ gatling_simulations }}/{{ item }}.sh"
+- name: Running simulations script
+  command:     "{{ simulations_script }}"
   environment: "{{ gatling_env | expand_path( ansible_env ) }}"
-  with_items:  simulations
-
-- file: path={{ reports_archive }} state=absent
-  when: reports_archive is defined
-
-- name: Archiving reports (tar.gz)
-  command: tar -czf '{{ reports_archive }}' .
-  args:
-    chdir: "{{ reports_dir }}"
-  when: ( reports_archive is defined ) and ( reports_archive.endswith( '.tar.gz' ))
-
-- name: Archiving reports (zip)
-  command: zip -r9 '{{ reports_archive }}' .
-  args:
-    chdir: "{{ reports_dir }}"
-  when: ( reports_archive is defined ) and ( reports_archive.endswith( '.zip' ))
+  when: run_simulations | default( True ) | bool
