--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -43,6 +43,6 @@ common: {
     exhibitor: "{{ playbook_dir }}/roles/exhibitor/tasks/main.yml",
     gradle:    "{{ playbook_dir }}/roles/gradle/tasks/main.yml",
     register:  "{{ playbook_dir }}/roles/skydns/register-host.yml",
-    gatling:   "{{ playbook_dir }}/roles/gatling/run-simulations.yml"
+    gatling:   "{{ playbook_dir }}/roles/gatling/run-simulations.yml",
   }
 }
