--- a/playbooks/roles/test-repo/vars/main.yml
+++ b/playbooks/roles/test-repo/vars/main.yml
@@ -5,7 +5,7 @@ test_repo: {
     # { name: LightWarmup,  users: 1,   artifacts: few-files.txt },
     { name: Warmup,  users: 1,   artifacts: all-artifacts-size-sorted.txt },
     { name: Get10,   users: 10,  artifacts: all-artifacts-name-sorted.txt },
-    { name: Get50,   users: 50,  artifacts: all-artifacts-name-sorted.txt },
-    { name: Get100,  users: 100, artifacts: all-artifacts-name-sorted.txt }
+    { name: Get30,   users: 30,  artifacts: all-artifacts-name-sorted.txt },
+    # { name: Get100,  users: 100, artifacts: all-artifacts-name-sorted.txt }
   ]
 }
