--- a/playbooks/roles/packer/meta/main.yml
+++ b/playbooks/roles/packer/meta/main.yml
@@ -1,3 +1,4 @@
 ---
 dependencies:
-  - { role: ansible, when: periodic }
+  - { role: base,    when: periodic }
+  - { role: ansible, when: periodic and ( not is_docker|bool ) }
