--- a/playbooks/roles/java/vars/main.yml
+++ b/playbooks/roles/java/vars/main.yml
@@ -11,6 +11,7 @@ java: {
     java_home_base:   /opt/java/64
   },
   oracle_jdk: {
+    java_home: /usr/lib/jvm/java-<N>-oracle
   },
   open_jdk: {
   }
