--- a/playbooks/roles/etcd/vars/main.yml
+++ b/playbooks/roles/etcd/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 etcd: {
-  version:  2.0.0-rc.1, # https://github.com/coreos/etcd/releases
+  version:  2.0.0, # https://github.com/coreos/etcd/releases
   port:     4001,
   dir_name: etcd-v<version>-linux-amd64,
   url:      '{{ common.urls.github }}/coreos/etcd/releases/download/v<version>/<dir_name>.tar.gz',
