--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -30,7 +30,8 @@ common: {
   utils: {
     download: "{{ playbook_dir }}/utils/download.yml",
     service:  "{{ playbook_dir }}/utils/service.yml",
-    verify:   "{{ playbook_dir }}/utils/verify.yml"
+    verify:   "{{ playbook_dir }}/utils/verify.yml",
+    fake:     "{{ playbook_dir }}/utils/fake-package.yml"
   },
 
   vars: {
