etcd /version check fix

--- a/playbooks/roles/helios/tasks/verify-master.yml
+++ b/playbooks/roles/helios/tasks/verify-master.yml
@@ -30,7 +30,7 @@
     host:  "{{ master }}"
     port:  "{{ etcd_port }}"
     verify:
-      - { path: /version, content: etcd }
+      - { path: /version, content: '"releaseVersion"' }
 
 - include: "{{ common.utils.verify }}"
   vars:
