--- a/playbooks/roles/etcd/tasks/main.yml
+++ b/playbooks/roles/etcd/tasks/main.yml
@@ -21,4 +21,4 @@
     command: "{{ etcd_bin }} $ETCD_OPTS"
     port:    "{{ etcd_port }}"
     verify:
-      - { path: /version, content: "{{ etcd.version }}" }
+      - { path: /version, content: '"releaseVersion":"{{ etcd.version }}"' }
